# prototypeSpace

./: Makefile  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  libtool  tests.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
includes/: libPrototypeSpace.h~
includes/prototypeSpace/: libPrototypeSpace.h  prototypeSpace.h
includes/prototypeSpace/debug/: debug.h
includes/prototypeSpace/graphics/: video_mode.h
includes/prototypeSpace/input/: window_poll.h
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in
src/lib/: Makefile  Makefile.am  Makefile.am~  Makefile.in  libPrototypeSpace.cpp  libPrototypeSpace.cpp~
src/lib/.deps/: debug.Po  libPrototypeSpace.Po  video_mode.Po  window_poll.Po
src/lib/debug/: debug.cpp
src/lib/graphics/: video_mode.cpp
src/lib/input/: window_poll.cpp
src/tests/: Makefile  Makefile.am  Makefile.am~  Makefile.in  debug.log~  main.cpp  main.cpp~
src/tests/.deps/: main.Po
